--- a/guessinggame.html
+++ b/guessinggame.html
@@ -16,6 +16,16 @@
           <div class='text-center'>
             <h1>Guess a number</h1>
           </div>
+          <div class="alert alert-info" role="alert"> 
+            <strong>Welcome!</strong> Please guess a number between 1 and 100.
+          </div>
+          <div class="bs-example" data-example-id="simple-progress-bar">
+            <div class="progress"> 
+              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:0%">
+               <span class="sr-only">60% Complete</span> 
+              </div> 
+            </div> 
+          </div>
         </div>
       </div>
     </div>
@@ -23,9 +33,9 @@
       <div class="row">
         <div class="col-xs-6 col-xs-offset-3">
           <div class="input-group">
-            <input type="text" class="form-control" placeholder="1-100">
+            <input type="text" id="input" class="form-control" placeholder="1-100">
             <span class="input-group-btn">
-              <button class="btn btn-primary" type="button">Guess</button>
+              <button class="btn btn-primary" type="button" attr="onclick">Guess</button>
             </span>
           </div>
         </div>
@@ -34,14 +44,15 @@
     <div class='container'>
       <div class='row'>
         <div class='col-xs-3 col-xs-offset-3'>
-          <button type="button" class="btn btn-default btn-block"><i class="glyphicon glyphicon-repeat"></i></button>
+          <button type="button" class="btn btn-default btn-block" attr="retry"><i class="glyphicon glyphicon-repeat"></i></button>
         </div>
         <div class='col-xs-3'>
-          <button type="button" class="btn btn-default btn-block"><i class="glyphicon glyphicon-question-sign"></i></button>
+          <button type="button" class="btn btn-default btn-block" attr="hint"><i class="glyphicon glyphicon-question-sign"></i></button>
         </div>
       </div>
     </div>
-    <script scr='jquery-3.0.0.js'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script type="text/javascript"  src='guessingGame.js'></script>
   </body>
 </html>
